force-app/main/default/objects/DD_Product_Category__c/DD_Product_Category__c.object-meta.xml
<CustomObject>
    <description>Groups products by type: PPO Plans, DHMO Plans, Pediatric, Bundles</description>
    <label>Product Category</label>
    <nameField><label>Product Category Name</label><type>Text</type></nameField>
    <pluralLabel>Product Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>