force-app/main/default/objects/DD_Product_Category__c/fields/Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Name__c</fullName>
    <label>Category Name</label>
    <type>Text</type>
    <length>100</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>Display name for this category</description>
</CustomField>