force-app/main/default/objects/DD_Product_Category__c/fields/Product_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog__c</fullName>
    <label>Product Catalog</label>
    <type>Lookup</type>
    <referenceTo>DD_Product_Catalog__c</referenceTo><relationshipLabel>Categories</relationshipLabel><relationshipName>Categories</relationshipName><required>true</required>
    <description>Parent catalog</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>